--- a/src/componets/Message/Message.hbs
+++ b/src/componets/Message/Message.hbs
@@ -1,7 +1,5 @@
 <div class={{className}}>
-    <div class={{styles.avatar}}>
-        {{> Avatar avatarContext  }}
-    </div>
+    {{{avatar}}}
     <div class={{styles.message}}>
         <span class={{styles.user}}>{{firstName}} {{lastName}}</span>
         <span class={{messageClass}}>{{message}}</span>
