--- a/src/pages/Register/Register.hbs
+++ b/src/pages/Register/Register.hbs
@@ -16,6 +16,7 @@
             {{{email}}}
             {{{password}}}
             {{{phone}}}
+            {{{contacts}}}
             {{{button}}}
         </form>
     </div>
