--- a/src/componets/Contact/Contact.hbs
+++ b/src/componets/Contact/Contact.hbs
@@ -1,6 +1,6 @@
 <div class={{className}}>
     <div class={{styles.conteiner}}>
-        {{> Avatar avatarContext  }}
+        {{{Avatar}}}
         <div class={{styles.center}}>
             <span class={{styles.user}}>{{firstName}} {{lastName}}</span>
             <span class={{styles.message}}>{{message}}</span>
