--- a/src/pages/Main/Main.hbs
+++ b/src/pages/Main/Main.hbs
@@ -13,7 +13,7 @@
         <ul class={{styles.messages}}>
             {{#each messages}}
                 <li>
-                    Привет
+                    {{{this}}}
                 </li>
             {{/each}}
         </ul>
