--- a/src/componets/Message/Message.module.css
+++ b/src/componets/Message/Message.module.css
@@ -20,11 +20,11 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 8px;
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   min-height: 70px;
   box-sizing: border-box;
   border-radius: 8px;
-  border-bottom-left-radius: 0px;
+  border-bottom-left-radius: 0;
 }
 
 .user {
