--- a/src/pages/Main/Main.hbs
+++ b/src/pages/Main/Main.hbs
@@ -10,7 +10,7 @@
         </ul>
     </section>
     <section class={{styles.chat}}>
-        <ul class={{styles.messages}}>
+        <ul class={{styles.chat-list}}>
             {{#each messages}}
                 <li>
                     {{{this}}}
