--- a/src/componets/Avatar/Avatar.hbs
+++ b/src/componets/Avatar/Avatar.hbs
@@ -1,3 +1,3 @@
 <div class={{className}}>
-    <img src="{{avatar}}" class={{className}} />
+    <img alt="avatar" src="{{avatar}}" class={{className}} />
 </div>
