--- a/src/componets/Button/Button.module.css
+++ b/src/componets/Button/Button.module.css
@@ -1,7 +1,7 @@
 .button {
-  background-color: #4D47C3;
+  background-color: #4d47c3;
   border-radius: 9px;
-  color: #FFFF;
+  color: #ffff;
   font-size: 16px;
   height: 60px;
   margin-top: 38px;
