--- a/src/componets/Input/Input.module.css
+++ b/src/componets/Input/Input.module.css
@@ -1,8 +1,8 @@
 .input {
-  background-color: #F0EFFF;
+  background-color: #f0efff;
   box-sizing: border-box;
-  border-color: #F0EFFF;
-  border-width: 0px;
+  border-color: #f0efff;
+  border-width: 0;
   border-radius: 8px;
   padding: 0 26px;
   height: 62px;
@@ -10,6 +10,6 @@
 }
 
 .input:placeholder-shown {
-  color: #A7A3FF;
+  color: #a7a3ff;
   padding: 0 26px;
 }
