--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -1,46 +1,58 @@
-
 a {
   font-size: 18px;
 }
+
 .wrapper {
-  display:flex;
+  display: flex;
   align-items: center;
   flex-direction: column;
-  background: #000000;
+  background: #000;
   width: 100%;
   height: 100vh;
 }
 
 .sun {
-  background:orange;
-  margin-top:10px;
-  width:15vmax;
-  height:15vmax;
-  border-radius:100%;
-  background:linear-gradient(to bottom, #FFD800, #FFD800, #F59440, #F59440, #EB6380, #AA12D7, #4e0962, rgba(0,0,0,0) 95%);
+  margin-top: 10px;
+  width: 15vmax;
+  height: 15vmax;
+  border-radius: 100%;
+  background:
+    linear-gradient(
+      to bottom,
+      #ffd800,
+      #ffd800,
+      #f59440,
+      #f59440,
+      #eb6380,
+      #aa12d7,
+      #4e0962,
+      rgb(0 0 0 / 0%) 95%
+    );
 }
+
 .sun::after {
-  content:"";
-  position:relative;
-  display:block;
-  width:100%;
-  height:100%;
-  background: repeating-linear-gradient(
-          to top,
-          rgba(0,0,0,1),
-          rgba(0,0,0,1) 3.8%,
-          rgba(0,0,0,0) 4%,
-          rgba(0,0,0,0) 17%
-  );
-  border-radius:100%;
+  content: "";
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background:
+    repeating-linear-gradient(
+      to top,
+      rgb(0 0 0 / 100%),
+      rgb(0 0 0 / 100%) 3.8%,
+      rgb(0 0 0 / 0%) 4%,
+      rgb(0 0 0 / 0%) 17%
+    );
+  border-radius: 100%;
 }
 
 .pages {
-  margin-top:60px;
-  border-radius:10%;
+  margin-top: 60px;
+  border-radius: 10%;
   background: orange;
-  width:15vmax;
-  height:20vmax;
+  width: 15vmax;
+  height: 20vmax;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
