--- a/src/componets/Message/Message.hbs
+++ b/src/componets/Message/Message.hbs
@@ -2,6 +2,6 @@
     {{{avatar}}}
     <div class={{styles.message}}>
         <span class={{styles.user}}>{{firstName}} {{lastName}}</span>
-        <span class={{messageClass}}>{{message}}</span>
+        <span class={{messageClass}}>{{content}}</span>
     </div>
 </div>
