--- a/src/pages/Profile/Profile.hbs
+++ b/src/pages/Profile/Profile.hbs
@@ -1,17 +1,21 @@
 <div class={{styles.main}}>
+  <div class={{styles.field-conteiner}}>
+    <div title="Изменить аватар" class={{styles.avatar}}>
+      {{{avatar}}}
+      {{{changeAvatar}}}
+    </div>
     <form class={{styles.field-conteiner}}>
-        <a href='#' title="Изменить аватар" class={{styles.avatar}}>
-            {{{avatar}}}
-        </a>
-        {{{firstName}}}
-        {{{secondName}}}
-        {{{displayName}}}
-        {{{email}}}
-        {{{phone}}}
-        {{{oldPassword}}}
-        {{{newPassword}}}
+      {{{firstName}}}
+      {{{secondName}}}
+      {{{displayName}}}
+      {{{login}}}
+      {{{email}}}
+      {{{phone}}}
+      {{{oldPassword}}}
+      {{{newPassword}}}
 
-        {{{save}}}
-        {{{cancel}}}
+      {{{save}}}
+      {{{cancel}}}
     </form>
+  </div>
 </div>
