--- a/src/componets/Contact/Contact.hbs
+++ b/src/componets/Contact/Contact.hbs
@@ -1,4 +1,4 @@
-<div class={{className}}>
+<div class="{{className}} contact" data-id="{{id}}">
     <div class={{styles.conteiner}}>
         {{{avatar}}}
         <div class={{styles.center}}>
