--- a/src/componets/Button/Button.module.css
+++ b/src/componets/Button/Button.module.css
@@ -1,4 +1,4 @@
-@import '../../styles/main.css';
+@import "../../styles/main.css";
 .button {
   background-color: var(--background-button);
   border-radius: 9px;
