--- a/src/componets/Button/Button.module.css
+++ b/src/componets/Button/Button.module.css
@@ -2,7 +2,7 @@
 .button {
   background-color: var(--background-button);
   border-radius: 9px;
-  color: #ffff;
+  color: var(--white);
   font-size: 16px;
   height: 60px;
   margin-top: 38px;
