--- a/src/pages/Intro/Intro.module.css
+++ b/src/pages/Intro/Intro.module.css
@@ -6,7 +6,7 @@ a {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: #000;
+  background: black;
   width: 100%;
   height: 100vh;
 }
